style: refactor & coding style

--- a/options.html
+++ b/options.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/options.css" media="all" />
-  <script src="js/jquery.min.js"></script>
+  <script src="js/jquery.min-v1.8.3.js"></script>
   <title>设置 | 蜘蛛</title>
 </head>
 
