--- a/xfinder.html
+++ b/xfinder.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <script src="js/jquery.min.js"></script>
+  <script src="js/jquery.min-v1.8.3.js"></script>
   <script type="module" src="js/xfinder.js"></script>
   <link rel="stylesheet" type="text/css" href="css/pop.css" media="all"/>
   <title>蜘蛛 | 资源嗅探</title>
