--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/pop.css" media="all"/>
-  <script src="js/jquery.min.js"></script>
+  <script src="js/jquery.min-v1.8.3.js"></script>
   <script type="module" src="js/popup.js"></script>
 </head>
 
