--- a/xfinder.html
+++ b/xfinder.html
@@ -2,46 +2,62 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <script src="js/jquery.min-v1.8.3.js"></script>
-  <script type="module" src="js/xfinder.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/pop.css" media="all"/>
+  <script type="module" src="js/xfinder/xfinder.js"></script>
+  <script src="js/xfinder/jquery.min-v1.9.1.js"></script>
+  <script src="js/xfinder/jquery.lazyload.js"></script>
+  <script src="js/xfinder/book.js"></script>
+  <link rel="stylesheet" href="js/xfinder/style.css" />
   <title>蜘蛛 | 资源嗅探</title>
 </head>
 <body>
+  <!-- 小说信息及用户设置 -->
+  <div class="book">
+    <div class="book-cell">
+      <!-- 听书宝 -->
+      <div id="tsb">
+        <h1 id="tsbBookName" class="book-title"></h1>
+        <div class="book-rand-a"><a>开始章节:</a>
+          <input id="tsbChapterStart" type="number"/>
+        </div>
+        <div class="book-rand-a"><a>结束章节:</a>
+          <input id="tsbChapterEnd" type="number"/>
+        </div>
+        <button id="tsbShowMedia" class="add-button">显示结果</button>
+        <button id="tsbFindResou" class="add-button">资源解析</button>
+      </div>
+      <!-- 有声听书吧 -->
+      <div id="ysts8">
 
-<div id="tsb">
-  <lable>下载地址前缀: </lable> <input id="xprefix" type="text" value="http://43.129.176.64/player/key.php?url=29725/yousheng/科幻有声/末日轮盘/"/><br>
-  <lable>下载地址后缀: </lable> <input id="xsuffix" type="text" value=".mp3"/><br><br>
+      </div>
+      <!-- 喜马拉雅 -->
+      <div id="xmly">
 
-  <lable>开始值: </lable> <input id="xstart" type="number" value="100"/><br>
-  <lable>步进值: </lable> <input id="xstep" type="number" value="1"/><br>
-  <lable>结束值: </lable> <input id="xend" type="number" value="105"/><br><br>
+      </div>
+      <!-- 显示支持解析的网站 -->
+      <div id="showNote">
+        <lable><a href="http://m.tingshubao.com">听书宝</a></lable>
+        <lable><a href="https://www.ximalaya.com">喜马拉雅</a></lable>
+        <lable><a href="https://m.ysts8.net/">有声听书吧</a></lable>
+      </div>
+    </div>
+  </div>
 
-  <lable>文件扩展名: </lable>  <input id="xfext" type="text" value="mp3"/><br><br>
-  <lable>每个请求超时时间(ms): </lable>  <input id="xtimeout" type="number" value="1000"/><br><br>
-
-  <button id="findResources" class="AddButton">资源解析</button>
-  <button id="showUrlsLists" class="AddButton">显示结果</button>
-</div>
-
-<div id="xmly">
-  <button id="xmlyShowData" class="AddButton">喜马拉雅</button>
-</div>
-
-<br><br>
-
-<div id="tempntc">没有抓到资源</div>
-<div id="medialist"></div>
-<div id="down">
-  <div id="DownFile">下载所选</div>
-  <div id="AllCopy">复制所选</div>
-  <div id="AllSelect">全选</div>
-  <div id="ReSelect">反选</div>
-</div>
-<div id="player">
-  <video autoplay controls width="100%"></video>
-  <input id="CloseBtn" type="button" value="关闭"/>
-</div>
-
+  <!-- 媒体资源列表 -->
+  <div class="module js_module_list">
+   <div class="js_fixed_block">
+    <div class="playlist-top">
+     <h2 class="playlist-title">资源列表</h2>
+     <div class="fr">
+      <div class="select-chapter show js_show_chapter">选集</div>
+      <div id="read_fx" class="icon atz"></div>
+     </div>
+    </div>
+    <div class="chapter-wrap js_chapter_wrap">
+     <ul class="chapter-list-block js_chapter_ul"></ul>
+    </div>
+    <div class="mask"></div>
+   </div>
+   <div class="play-list" id="medialist"></div>
+  </div>
 </body>
 </html>
