wip: 听书宝资源排序及HTML页面显示

--- a/xfinder.html
+++ b/xfinder.html
@@ -29,6 +29,7 @@
         </div>
         <button id="clearData" class="add-button">清空列表</button>
         <button id="downloadMedia" class="add-button">全部下载</button>
+        <button id="showMedia" class="add-button">显示资源</button>
       </div>
 
       <!-- 听书宝 -->
